@@ -10,11 +10,11 @@ import fullstack.project.services.strings.routes.Routes;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static fullstack.project.services.services.TutorServiceImpl.getAuthenticatedTutorEmail;
 
 @RestController
+@RequestMapping(Routes.STUDENT_BASE_URL)
 public class StudentController {
     private final StudentService studentService;
     private final TutorService tutorService;
@@ -23,31 +23,36 @@ public class StudentController {
         this.studentService = studentService;
         this.tutorService = tutorService;
     }
-    @GetMapping(Routes.STUDENT_BASE_URL + "/{studentId}")
+
+    @GetMapping("/{studentId}")
     public StudentDTO findStudentById(@PathVariable long studentId) {
         return StudentDTOMapper.toDTO(studentService.findById(studentId));
     }
-    @GetMapping(Routes.STUDENT_BASE_URL)
+
+    @GetMapping
     public List<StudentDTO> findAllStudents() {
         return studentService.findAllByTutorEmail(getAuthenticatedTutorEmail())
                 .stream()
                 .map(StudentDTOMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-    @PostMapping(Routes.STUDENT_BASE_URL)
+
+    @PostMapping
     public StudentDTO saveStudent(@RequestBody StudentDTO studentDTO) {
         Tutor tutor = tutorService.findByEmail(getAuthenticatedTutorEmail());
         Student s = studentService.save(StudentDTOMapper.toStudent(studentDTO, tutor));
         return StudentDTOMapper.toDTO(s);
     }
-    @PutMapping(Routes.STUDENT_BASE_URL + "/{studentId}")
+
+    @PutMapping("/{studentId}")
     public StudentDTO updateStudent(@PathVariable long studentId, @RequestBody StudentDTO studentDTO) {
         Tutor tutor = tutorService.findByEmail(getAuthenticatedTutorEmail());
         studentDTO.setId(studentId);
         Student s = studentService.update(StudentDTOMapper.toStudent(studentDTO, tutor));
         return StudentDTOMapper.toDTO(s);
     }
-    @DeleteMapping(Routes.STUDENT_BASE_URL + "/{studentId}")
+
+    @DeleteMapping("/{studentId}")
     public boolean deleteStudent(@PathVariable long studentId) {
         return studentService.deleteById(studentId);
     }
